--- a/Project.toml
+++ b/Project.toml
@@ -8,16 +8,20 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+SolarPosition = "5b9d1343-a731-5a90-8730-7bf8d89bf3eb"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 CSV = "0.10.15"
 Configurations = "0.17.6"
 DataFrames = "1.8.1"
 Dates = "1.11.0"
+SolarPosition = "0.4.2"
 TOML = "1.0.3"
 Tables = "1.12.1"
+Unitful = "1.27.0"
 julia = "1.12"
 
 [extras]
