--- a/Project.toml
+++ b/Project.toml
@@ -9,12 +9,14 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 SolarPosition = "5b9d1343-a731-5a90-8730-7bf8d89bf3eb"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 [compat]
 CSV = "0.10.15"
@@ -22,12 +24,14 @@ CairoMakie = "0.15.8"
 Configurations = "0.17.6"
 DataFrames = "1.8.1"
 Dates = "1.11.0"
+HTTP = "1.10.19"
 Makie = "0.24.8"
 SolarPosition = "0.4.2"
 TOML = "1.0.3"
 Tables = "1.12.1"
 TimeZones = "1.22.2"
 Unitful = "1.27.0"
+ZipFile = "0.10.1"
 julia = "1.12"
 
 [extras]
