--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SolarPosition = "5b9d1343-a731-5a90-8730-7bf8d89bf3eb"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
@@ -29,6 +30,7 @@ Dates = "1.11.0"
 HTTP = "1.10.19"
 Logging = "1.11.0"
 Makie = "0.24.8"
+Revise = "3.13.2"
 SolarPosition = "0.4.2"
 Suppressor = "0.2.8"
 TOML = "1.0.3"
