--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "PET"
 uuid = "818149cd-5caa-400d-8d3a-cc13d265cce7"
-version = "1.0.0-DEV"
+version = "1.0.0"
 authors = ["Joseph A.P. POLLACCO"]
 
 [deps]
